--- a/siofra.html
+++ b/siofra.html
@@ -55,53 +55,23 @@
 
     <!-- <hr> -->
 
-    <div class="coleccion">
+    <div class="producto-text">
 
-		<!-- <div class="lampara_1">
-			<a href="lampara_2.html"><img src="images/lampara_2 (1).jpg"></a>
-		</div> -->
-
-		<div class="siofra">
-			<a href="siofra.html"><img src="images/siofra (5).jpg"></a>
-		</div>
-		<div class="vallis">
-			<a href="vallis.html"><img src="images/vallis (1).jpg"></a>
-		</div>
-		<div class="de_la_luna">
-			<a href="de_la_luna.html"><img src="images/de_la_luna (10).jpg"></a>
-		</div>
-		<div class="ice_ice">
-			<a href="ice_ice.html"><img src="images/ice_ice (9).jpg"></a>
-		</div>
-		<div class="quarry">
-        	<a href="quarry.html"><img src="images/quarry (7).jpg"></a>
-		</div>
-		<div class="magma">
-        	<a href="magma.html"><img src="images/magma (9).jpg"></a>
-		</div>
-		<div class="candelabro_pie">
-			<a href="candelabro_pie_1.html"><img src="images/candelabro_pie_1 (1).jpg"></a>
-		 </div>
-		<div class="candelabros">
-			<a href="candelabro_1.html"><img src="images/candelabro_1 (3).jpg"></a>
-		</div>
-		<div class="candelabros">
-			<a href="candelabro_2.html"><img src="images/candelabro_2 (1).jpg"></a>
-		</div>
-		<div class="candelabros">
-			<a href="candelabro_3.html"><img src="images/candelabro_3 (1).jpg"></a>
-		</div>
-		<div class="candelabros">
-			<a href="candelabro_4.html"><img src="images/candelabro_4 (1).jpg"></a>
-		</div>
-		<div class="nebula">
-			<a href="nebula.html"><img src="images/nebula (1).jpg"></a>
-		</div>
-		<div class="posavasos">
-			<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
-		</div>
+        <h3>Siofra - Lámpara de mesa</h3>
+        <h5>Aluminio pulido. Vidrio cristalino fundido.</h5>
+        <h5>Ø: 13 cm | Alto: 35 cm</h5>
 
     </div>
+
+    <div class="producto">
+        
+		<a href="images/siofra (2).jpg"><img src="images/siofra (2).jpg"></a>
+		<a href="images/siofra (5).jpg"><img src="images/siofra (5).jpg"></a>
+		<a href="images/siofra (1).jpg"><img src="images/siofra (1).jpg"></a>
+		<a href="images/siofra (4).jpg"><img src="images/siofra (4).jpg"></a>
+		<a href="images/siofra (3).jpg"><img src="images/siofra (3).jpg"></a>
+    
+      </div>
 
 </body>
 </html>
